--- a/product.html
+++ b/product.html
@@ -6,18 +6,18 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Narrow &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Floristería la milagrosa</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Arreglos florales detalles y algo mas " />
+	<meta name="keywords" content="floristería fontibon, detalles fontibon, dia de la madre, dia del padre, aniversario, cumpleaños, responsive" />
+	<meta name="author" content="wilo" />
 
-  <!-- 
+  <!--
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	FREE HTML5 TEMPLATE
 	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
+
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
 	Twitter: 		http://twitter.com/fh5co
@@ -38,10 +38,10 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link  rel="icon"   href="./images/icono.png" type="image/png" />
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -71,16 +71,16 @@
 					<div class="row">
 						<div class="col-md-3">
 							<div class="fh5co-navbar-brand">
-								<a class="fh5co-logo" href="index.html">Narrow</a>
+								<a class="fh5co-logo" href="index.html">Floristería la milagrosa</a>
 							</div>
 						</div>
 						<div class="col-md-9 main-nav">
 							<ul class="nav text-right">
-								<li><a href="index.html"><span>Home</span></a></li>
-								<li><a href="services.html">Services</a></li>
-								<li class="active"><a href="product.html">Products</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="index.html"><span>Inicio</span></a></li>
+								<li><a href="services.html">Servicios</a></li>
+								<li class="active"><a href="product.html">Productos</a></li>
+								<li><a href="about.html">Acerca de nosotros</a></li>
+								<li><a href="contact.html">Contactenos</a></li>
 							</ul>
 						</div>
 					</div>
@@ -151,9 +151,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p>Copyright 2016 Free Html5 <a href="#">Narrow</a>. All Rights Reserved. <br>Made with <i class="icon-heart3 love"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+								<p>Copyright 2019 . Todos los derechos reservados.</p>
 							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter-with-circle"></i></a>
 								<a href="#"><i class="icon-facebook-with-circle"></i></a>
 								<a href="#"><i class="icon-instagram-with-circle"></i></a>
 							</p>
@@ -164,7 +163,7 @@
 		</footer>
 	</div>
 	<!-- END: box-wrap -->
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -183,4 +182,3 @@
 
 	</body>
 </html>
-
